# Server

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
libraries/: CMakeLists.txt
libraries/appbase/: CMakeLists.txt  application.cpp  application.hpp
plugins/: CMakeLists.txt
plugins/hello_plugin/: CMakeLists.txt  hello_plugin.cpp  hello_plugin.hpp
programs/server/: CMakeLists.txt  main.cpp
